update LoanUtils.kt in dollar
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/loan_fragment.xml
+++ b/app/src/main/res/layout/loan_fragment.xml
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/marginEnd"
             android:layout_marginTop="@dimen/marginTop"
-            android:text="@{ @string/loanResult(viewModel.loanTerm,viewModel.interest, viewModel.monthlyLoan ) }"
+            android:text="@{ @string/loanResult(viewModel.loanTerm,viewModel.interestInDollar, viewModel.monthlyLoan ) }"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
