--- a/app/src/main/res/navigation/mobile_detail_nav_sub.xml
+++ b/app/src/main/res/navigation/mobile_detail_nav_sub.xml
@@ -10,7 +10,7 @@
         android:label="PropertyDetailFragment"
         tools:layout="@layout/property_detail" />
     <argument
-        android:name="item_id"
+        android:name="property_id"
         android:defaultValue=""
         app:argType="string" />
 </navigation>
