--- a/app/src/main/res/layout-w900dp/property_detail.xml
+++ b/app/src/main/res/layout-w900dp/property_detail.xml
@@ -214,7 +214,7 @@
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{@plurals/room_plural(property.roomNumber,property.roomNumber)}"
+                    android:text="@{property.roomNumber!=null ? @plurals/room_plural(property.roomNumber,property.roomNumber): @plurals/room_plural(0,0)}"
                     app:drawableLeftCompat="@drawable/ic_room_24dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/item_type" />
@@ -226,7 +226,7 @@
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{@plurals/bedrooms_plural(property.bedroomNumber,property.bedroomNumber)}"
+                    android:text="@{property.bedroomNumber!=null ? @plurals/bedrooms_plural(property.bedroomNumber,property.bedroomNumber):@plurals/bedrooms_plural(0,0)}"
                     app:drawableLeftCompat="@drawable/ic_bedroom_parent_24dp"
                     app:layout_constraintEnd_toStartOf="@id/bathrooms_text"
                     app:layout_constraintStart_toEndOf="@id/rooms_text"
@@ -239,7 +239,7 @@
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{@plurals/bathrooms_plural(property.bathroomNumber,property.bathroomNumber)}"
+                    android:text="@{property.bathroomNumber!=null ? @plurals/bathrooms_plural(property.bathroomNumber,property.bathroomNumber):@plurals/bathrooms_plural(0,0)}"
                     app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/bedrooms_text"
@@ -261,7 +261,6 @@
                     android:id="@+id/description_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:justificationMode="inter_word"
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
