--- a/app/src/main/res/layout-sw600dp/property_detail.xml
+++ b/app/src/main/res/layout-sw600dp/property_detail.xml
@@ -40,6 +40,15 @@
         tools:context=".ItemDetailHostActivity"
         tools:ignore="MergeRootFrame">
 
+        <TextView
+            android:id="@+id/no_property_text"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/no_property_yet"
+            android:visibility="gone" />
+
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
@@ -436,27 +445,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
-
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomAppBar"
-            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:fabAlignmentMode="end"
-
-            app:title="Add a new property" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addPropertyFAB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
-            android:baselineAlignBottom="true"
-            android:contentDescription="@string/add_property_button"
-            app:backgroundTint="@color/colorAccent"
-            app:layout_anchor="@id/bottomAppBar"
-            app:srcCompat="@drawable/ic_edit_24dp" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
